--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "css-loader": "^0.15.5",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
     "mocha": "^2.2.5",
     "mocha-loader": "^0.7.1",
     "node-libs-browser": "^0.5.2",
