--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "css-loader": "^0.15.5",
+    "file-loader": "^0.8.4",
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "mocha": "^2.2.5",
